@@ -53,8 +53,6 @@ Legacy (0.4.x) series
 
 Misc.
 -----
-	[ ]  "continue" should clear the undo stack (?).
-
 	[/]  CommandInterpreter:
 		[X]  Tab completion of methods!
 		[ ]  Tab completion of state variables!
