@@ -4057,3 +4057,4 @@ Changelog for GXemul:
 		from the ActionStack (now a friend class of Action).
 20080424	Upgrading configure script check for gtkmm-2.4 from version
 		2.12.5 to 2.12.7, to be in synch with my system.
+20080426	The continue command now clears the Undo stack.
